admin.css: Fixed project screenshot overflow

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -33,6 +33,7 @@
 	height: 210px;
 	line-height: 210px;
 	text-align: center;
+	padding: 0;
 }
 .screenshot img{
 	max-height: 200px;
